<resources>
    <string name="app_name">MasterSip</string>
    <string name="login_activity">Login Activity</string>
    <string name="register_dob_activity">Register DoB Activity</string>
    <string name="top_activity">Top Activity</string>
    <string name="register_info_activity">Register Info Activity</string>
    <string name="tip_page_activity">Tip Page activity</string>
    <string name="policy">プライバシー・ポリシー</string>
    <string name="terms_of_service">利用規約</string>
    <string name="register_dob_title">アカウント登録</string>
    <string name="select_dob">生年月日</string>
    <string name="select_gender">性別</string>
    <string name="err_gender_empty">性別が空白です。</string>
    <string name="err_dob_empty">生年月日が空白です。</string>
    <string name="err_age_less_than_18">１８歳未満の方は登録できません。</string>
    <string name="err_facebook_age_below_18">お客様のfacebook情報では登録できません。SIPでは18歳未満のご利用を禁止しています。</string>
    <string name="enter_nickname">なまえの入力</string>
    <string name="tokyo">東京都</string>
    <string name="part_time">フリーター</string>
    <string name="status">メッセージ</string>
    <string name="register_profile">プロフィール入力</string>
    <string name="tip_page_title">プロフィール登録前に</string>
    <string name="profession">職業</string>
    <string-array name="type">
        <item>清楚</item>

        <item>おっとり系</item>
        <item>ロリ系</item>
        <item>癒し系</item>
        <item>きれい系</item>
        <item>かわいい系</item>
        <item>ギャル系</item>
        <item>お笑い系</item>
        <item>天然系</item>
        <item>お姉系</item>
        <item>妹系</item>
        <item>女王様系</item>
        <item>ヒミツ</item>
    </string-array>
    <string name="neat">清楚系</string>
    <string name="charm_point">チャームポイント</string>
    <string name="type_of_men">タイプの男性</string>
    <string name="available_time">主な出没時間</string>
    <string name="irregular">不定期</string>
    <string name="pick_location">地域選択</string>
    <string name="take_a_picture">写真を撮る</string>
    <string name="select_from_library">ライブラリから選択する</string>
    <string name="cancel">キャンセル</string>
    <string name="mess_confirm_cancel_crop_image">画像の編集を中止してもよろしいでしょうか？</string>
    <string name="register_success">登録完了</string>
    <string name="mess_input_profile">続いてプロフィールをご入力ください。</string>
    <string name="delete_image">写真を削除する</string>
    <string name="mess_delete_image_success">写真を削除しました。</string>
    <string name="unset">未設定</string>
    <string name="complete_register">登録を完了する</string>
    <string name="start">はじめる(無料)</string>
    <string name="login">ログイン</string>
    <string name="loading">Loading...</string>
    <string name="member">背景</string>
    <string name="message">チャット</string>
    <string name="leg">足あと</string>
    <string name="heart">フォロワー</string>
    <string name="menu">マイメニュー</string>
    <string name="enable_location">位置情報を利用する</string>
    <string name="mess_enable_gps">You must enable your location access</string>
    <string name="err_user_name_empty">氏名を入力してください</string>
    <string name="err_require_field_empty">(※)は必須項目です。</string>
    <string name="setting_condition">条件設定</string>
    <string name="area">地域</string>
    <string name="age">年齢</string>
    <string name="login_with_24h">24時間以内ログイン</string>
    <string name="sort">並び替え</string>
    <string name="i_do_not_care">こだわらない〜こだわらない</string>
    <string name="do_not_care">こだわらない</string>
    <string name="login_order_by_newest">ログインが新しい順</string>
    <string name="search_with_condition">この条件で検索する</string>
    <string name="handle_name_search">ハンドルネーム検索</string>
    <string name="search_by_name">ハンドルネームで検索する</string>
    <string name="pls_enter_name">ハンドルネームを入力してください</string>
    <string name="filter_by_name">ハンドルネーム検索</string>
    <string name="filter_call_waiting">通話待ち</string>
    <string name="filter_new">新人</string>
    <string name="filter_all">全て表示</string>
    <string name="search_condition">検索条件</string>
    <string name="call_phone">通話設定</string>
    <string name="err_pls_select_area">地域を選択してください</string>
    <string name="err_no_network">No network connection</string>
    <string name="err_invalid_token">Invalid token</string>
    <string name="err_request_time_out">Request time out</string>
    <string name="err_unknow">Unknow Error</string>
    <string name="err_cant_get_location">Get Your location failed. Please try again</string>
    <string name="err_server_error">Internal server error</string>
    <string name="hokkaido">北海道</string>
    <string name="multi_choice_possible">※複数選択可</string>
    <string name="tohoku">東北</string>
    <string name="select_all">すべて選択</string>
    <string name="aomori">青森</string>
    <string name="iwate">岩手</string>
    <string name="miyagi">宮城</string>
    <string name="akita">秋田</string>
    <string name="yamagata">山形</string>
    <string name="foreign_country">海外</string>
    <string name="region_selection">地域選択</string>
    <string name="err_wrong_order_by_code">Wrong order by code</string>
    <string name="message_have_ng">入力できない文字が \n 含まれています。</string>
    <string name="name_ng">ハンドルネームに入力できない文字が\n含まれています。</string>
    <string name="slogan_ng">メッセージに入力できない文字が\n含まれています。</string>
    <string name="type_ng">タイプの男性に入力できない文字が\n含まれています。</string>
    <string name="charm_point_ng">チャームポイントに入力できない文字が\n含まれています。</string>
    <string name="message_sender_not_good">不適切な内容のため削除されました。</string>
    <string name="message_receiver_not_good">お相手のコメントは削除されました。</string>
    <string-array name="array_gender">
        <item>男性</item>
        <item>女性</item>
    </string-array>
    <string-array name="female_job">
        <item>未設定</item>
        <item>学生"</item>
        <item>OL</item>
        <item>アルバイター</item>
        <item>フリーター</item>
        <item>看護師</item>
        <item>保育士</item>
        <item>販売員</item>
        <item>モデル</item>
        <item>教師</item>
        <item>家事手伝い</item>
        <item>主婦</item>
        <item>飲食系</item>
        <item>アパレル系</item>
        <item>美容系</item>
        <item>お水系</item>
        <item>ヒミツ</item>
        <item>その他</item>
    </string-array>
    <string-array name="male_job">
        <item>会社員</item>
        <item>経営者</item>
        <item>経営幹部</item>
        <item>フリーター</item>
        <item>学生</item>
        <item>エンジニア</item>
        <item>製造系</item>
        <item>運輸系</item>
        <item>金融系</item>
        <item>不動産系</item>
        <item>法律系</item>
        <item>IT系</item>
        <item>医療系</item>
        <item>教育系</item>
        <item>福祉系</item>
        <item>アパレル系</item>
        <item>メディア系</item>
        <item>芸術系</item>
        <item>その他</item>
        <item>ヒミツ</item>
    </string-array>
    <string-array name="rest_time">
        <item>午前中</item>
        <item>朝～昼間</item>
        <item>夕方</item>
        <item>夜～深夜</item>
        <item>深夜～早朝</item>
    </string-array>
    <string-array name="districts">
        <item>北海道</item>
        <item>青森県</item>
        <item>岩手県</item>
        <item>宮城県</item>
        <item>秋田県</item>
        <item>山形県</item>
        <item>福島県</item>
        <item>茨城県</item>
        <item>栃木県</item>
        <item>群馬県</item>
        <item>埼玉県</item>
        <item>千葉県</item>
        <item>東京都</item>
        <item>神奈川県</item>
        <item>新潟県</item>
        <item>富山県</item>
        <item>石川県</item>
        <item>福井県</item>
        <item>山梨県</item>
        <item>長野県</item>
        <item>岐阜県</item>
        <item>静岡県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>兵庫県</item>
        <item>奈良県</item>
        <item>和歌山</item>
        <item>鳥取県</item>
        <item>島根県</item>
        <item>岡山県</item>
        <item>広島県</item>
        <item>山口県</item>
        <item>徳島県</item>
        <item>香川県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>熊本県</item>
        <item>大分県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
    </string-array>
    <string-array name="cities">
        <item>東北</item>
        <item>関東</item>
        <item>中部</item>
        <item>近畿</item>
        <item>中国</item>
        <item>四国</item>
        <item>九州</item>
        <item>海外</item>
    </string-array>
    <string name="last_login">ログインが新しい順</string>
    <string name="last_register">登録が新しい順</string>
    <string name="search_result_displayed_here">ここに検索結果が表示されます。</string>
    <string name="during_a_voice_call">音声通話で呼び出し中...</string>
    <string name="mic">マイク</string>
    <string name="speaker">スピーカー</string>
    <string name="in_coming_voice_call">音声通話で着信中...</string>
    <string name="begin">開始</string>
    <string name="reject">拒否</string>
    <string name="current_point">現在のポイント : </string>
    <string name="filter_call_in_message">音声通話</string>
    <string name="chat">チャット</string>
    <string name="voice_call">音声通話</string>
    <string name="video_call">ビデオ通話</string>
    <string name="are_you_sure_make_a_voice_call">音声通話を発信しますか。</string>
    <string name="profile">プロフィール</string>
    <string name="follow">フォローする</string>
    <string name="give_a_gift">ギフトを贈る</string>
    <string name="list_photo">写真のみ表示</string>
    <string name="photos">枚の写真</string>
    <string name="txt_already_read">既読</string>
    <string name="pt">pt</string>
    <string name="search">検索</string>
    <string name="year_old">歳</string>
    <string name="facebook_app_id">1786574714906949</string>
    <string name="send">送信</string>
    <string name="send_a_give">ギフトを贈る</string>
    <string name="online_notify">オンライン通知</string>
    <string name="name">なまえ</string>
    <string name="residence">住まい</string>
    <string name="select_photo">写真を選択</string>
    <string name="logout">ログアウト</string>
    <string name="email_backup">メールアドレス設定</string>
    <string name="approving">審査中</string>
    <string name="confirm_delete_avatar">現在登録されている写真を削除しても\nよろしいでしょうか？</string>
    <string name="delete_avatar_notify">写真を削除しました。</string>
    <string name="today">今日</string>
    <string name="description_call_setting">以下項目でチェックした通話形式のみ\n「着信」が受け取れるようになります。\n\n チェックを外した通話形式は「着信拒否」の扱い となります。</string>
    <string name="setting_voice_call">音声通話での着信許可</string>
    <string name="setting_video_call">ビデオ通話での着信許可</string>
    <string name="confirm_setting_call">設定を保存する</string>
    <string name="title_setting_call">通話設定</string>
    <string name="mess_call_setting_changed">通話設定が保存されました。</string>
    <string name="notify_follow_user_success">さんをフォローしました。 ギフトを贈ってアプローチしますか？</string>
    <string name="mess_followed">フォローしました</string>
    <string name="notify_un_follow_user_success">さんへのフォローを解除しました。</string>
    <string name="mess_un_followed">フォローを解除しました</string>
    <string name="un_follow">フォロー解除</string>
    <string name="OK">OK</string>
    <string name="gifts_description_male">気になる女の子にプレゼントをあげて、\n 今すぐアタックをかけてみよう!!</string>
    <string name="gifts_description_female">気になる男性にプレゼントをあげて、\n 今すぐアピールしてみよう!!</string>
    <string name="gifts_list">ギフトを贈る</string>
    <string name="note_register_mail_backup">メールアドレス・パスワードを登録すると、 機種変更やデータ紛失の際などに ご利用データを引き継ぐことができます。</string>
    <string name="hint_email">メールアドレス</string>
    <string name="hint_pass">パスワード</string>
    <string name="hint_re_pass">パスワード(確認用)</string>
    <string name="register">登録</string>
    <string name="change">変更</string>
    <string name="label_new_email_pass">新しいメールアドレスとパスワードを入力</string>
    <string name="title_forgot_password">＞パスワードをお忘れの方</string>
    <string name="hint_new_email">新しいメールアドレス</string>
    <string name="hint_old_pass">現在のパスワード</string>
    <string name="label_enter_current_pass">現在のパスワードを入力</string>
    <string name="title_email_registed">登録中のメールアドレス</string>
    <string name="purchase_points">ポイント購入</string>
    <string name="the_call_end_in_3_minites_remaining">残り3分程度で通話が終了します</string>
    <string name="if_you_want_to_talking_pls_purchase_point">続けて通話したい方は ポイントの購入をお願いします。</string>
    <string name="it_will_purchased_by_google">※Googleでの購入になります</string>
</resources>